--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -727,7 +727,44 @@
 	            there is a one-way function. },
 }
 
+@misc{asharov-et-al-2022,
+	author = {Gilad Asharov and Ran Cohen and Oren Shochat},
+	title = {Static vs. Adaptive Security in Perfect MPC: A Separation and the
+	         Adaptive Security of BGW},
+	howpublished = {Cryptology ePrint Archive, Paper 2022/758},
+	year = {2022},
+	note = {\url{https://eprint.iacr.org/2022/758}},
+	url = {https://eprint.iacr.org/2022/758},
+}
 
+@misc{lindell-et-al-2002,
+	author = {Yehuda Lindell and Anna Lysyanskaya and Tal Rabin},
+	title = {On the Composition of Authenticated Byzantine Agreement},
+	howpublished = {Cryptology ePrint Archive, Paper 2004/181},
+	year = {2004},
+	note = {\url{https://eprint.iacr.org/2004/181}},
+	url = {https://eprint.iacr.org/2004/181},
+}
 
+@inproceedings{canetti-et-al-2015,
+	author = "Canetti, Ran and Goldwasser, Shafi and Poburinnaya, Oxana",
+	editor = "Dodis, Yevgeniy and Nielsen, Jesper Buus",
+	title = "Adaptively Secure Two-Party Computation from Indistinguishability
+	         Obfuscation",
+	booktitle = "Theory of Cryptography",
+	year = "2015",
+	publisher = "Springer Berlin Heidelberg",
+	address = "Berlin, Heidelberg",
+	pages = "557--585",
+	abstract = "We present the first two-round, two-party general function
+	            evaluation protocol that is secure against honest-but-curious
+	            adaptive corruption of both parties. In addition, the protocol is
+	            incoercible for one of the parties, and fully leakage tolerant. It
+	            requires a global (non-programmable) reference string and is based
+	            on one way functions and general-purpose indistinguishability
+	            obfuscation with sub-exponential security, as well as augmented
+	            non-committing encryption.",
+	isbn = "978-3-662-46497-7",
+}
 
 
