--- a/writeup/prelude.tex
+++ b/writeup/prelude.tex
@@ -84,10 +84,10 @@
 \newcommand{\cat}[1]{{\mathcal{#1}}}
 \newcommand{\scat}[1]{{\textsc{\text{#1}}}}
 \newcommand{\alg}[1]{{\texttt{#1}}}
-\newcommand{\ideal}[1]{{\overline{#1}}}
 
 \DeclareMathOperator{\ca}{ca}
 \DeclareMathOperator{\view}{view}
+\DeclareMathOperator{\ideal}{ideal}
 
 % theorems
 \theoremstyle{plain}
