--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -767,4 +767,56 @@
 	isbn = "978-3-662-46497-7",
 }
 
+@inproceedings{cramer-et-al-1999,
+	author = "Cramer, Ronald and Damg{\aa}rd, Ivan and Dziembowski, Stefan and
+	          Hirt, Martin and Rabin, Tal",
+	editor = "Stern, Jacques",
+	title = "Efficient Multiparty Computations Secure Against an Adaptive
+	         Adversary",
+	booktitle = "Advances in Cryptology --- EUROCRYPT '99",
+	year = "1999",
+	publisher = "Springer Berlin Heidelberg",
+	address = "Berlin, Heidelberg",
+	pages = "311--326",
+	abstract = "We consider verifiable secret sharing (VSS) and multiparty
+	            computation (MPC) in the secure-channels model, where a broadcast
+	            channel is given and a non-zero error probability is allowed. In
+	            this model Rabin and Ben-Or proposed VSS and MPC protocols secure
+	            against an adversary that can corrupt any minority of the players.
+	            In this paper, we first observe that a subprotocol of theirs, known
+	            as weak secret sharing (WSS), is not secure against an adaptive
+	            adversary, contrary to what was believed earlier. We then propose
+	            new and adaptively secure protocols for WSS, VSS and MPC that are
+	            substantially more efficient than the original ones. Our protocols
+	            generalize easily to provide security against general
+	            Q2-adversaries.",
+	isbn = "978-3-540-48910-8",
+}
 
+@article{even-et-al-1985,
+	author = {Even, Shimon and Goldreich, Oded and Lempel, Abraham},
+	title = {A randomized protocol for signing contracts},
+	year = {1985},
+	issue_date = {June 1985},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	volume = {28},
+	number = {6},
+	issn = {0001-0782},
+	url = {https://doi.org/10.1145/3812.3818},
+	doi = {10. author = {Even, Shimon and Goldreich, Oded and Lempel, Abraham},
+	       title = {A randomized protocol for signing contracts}, year = {1985},
+	       issue_date = {June 1985}, publisher = {Association for Computing
+	       Machinery}, address = {New York, NY, USA}, volume = {28}, number = {6},
+	       issn = {0001-0782}, url = {https://doi.org/10.1145/3812.3818}, doi = {
+	       10.1145/3812.3818}, abstract = {Randomized protocols for signing
+	       contracts, certified mail, and flipping a coin are presented. The
+	       protocols use a 1-out-of-2 oblivious transfer subprotocol which is
+	       axiomatically defined.The 1-out-of-2 oblivious transfer allows one party
+	       to transfer exactly one secret, out of two recognizable secrets, to his
+	       counterpart. The first (second) secret is received with probability one
+	       half, while the sender is ignorant of which secret has been received.An
+	       implementation of the 1-out-of-2 oblivious transfer, using any public
+	       key cryptosystem, is presented.}, journal = {Commun. ACM}, month = {jun}
+	       , pages = {637–647}, numpages = {11} },
+}
